# dotfiles

./: .ansible-lint  .bandit  .envrc  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  ansible.cfg  changelog.md  conf.py  index.md  license.md  markdownlint-cli2-junit.xml  pyproject.toml  readme.md  security.md  site.yml  sonar-project.properties  tasks.md  tox.ini
.github/: dependabot.yml  index.md
.github.bak/workflows/: actions.yml  pages.yml  shellcheck.yml
.github/workflows/: bandit.yml  black.yml  codeql.yml  coveralls.yml  dependency-review.yml  documentation.yml  metadata.yml  ossar.yml  pylint.yml  pysa.yml  scorecard.yml  shell.yml
.tmp/: pyvenv.cfg
_static/dot/: ad.dot  k8s.dot  network.dot  plugins.dot
_static/gpg/: license.signature.part-one.gpg  license.signature.part-zero.gpg  xander-harris.gpg
alpine/: .bashrc  .vimrc
ansible/: .ansible-lint  ansible.cfg  files.yml  hosts.yml  index.md  site.yml
ansible/files/: index.md
ansible/files/ad/: index.md  site.yml
ansible/files/arch/: index.md  install-to-usb.md  site.yml
ansible/files/githooks/: index.md  prepare_commit_msg.py  reqs  test_prepare_commit_msg.py
ansible/files/gw/: 10-network.rules  index.md  site.yml
ansible/files/k8s/: index.md
ansible/files/nautobot/: index.md  site.yml
ansible/roles/: index.md
ansible/roles/containerd/: index.md
ansible/roles/kcp/: index.md
ansible/roles/root/: index.md
ansible/roles/users/: index.md
ansible/roles/volumes/: index.md
macos/: .bashrc  .gitconfig  .vimrc  .wakatime.cfg
mint/: .bashrc  .vimrc
roles/: index.md
roles/ansible/: README.md
roles/ansible/files/: ansible.cfg
roles/arch/: README.md  readme.md
roles/arch/defaults/: main.yml
roles/arch/files/: glances-exporter.service  glances.conf  glances.service  sshd
roles/arch/handlers/: main.yml
roles/arch/meta/: main.yml
roles/arch/tasks/: main.yml
roles/arch/templates/: gmotd.yaml.j2
roles/arch/tests/: test.yml
roles/arch/vars/: main.yml
roles/dev/: readme.md
roles/ping/: README.md
roles/user/: README.md  readme.md
ubuntu/: index.md  site.yml
ubuntu/root/: .bashrc
ubuntu/user/: .bashrc  .gitconfig  .wakatime.cfg  user.tar.bz2
(+154 files in other folders)
