[project]
name = "dotfiles"
version = "0.1.0"
description = "Dotfiles and management of dubious quality"
authors = [
    {name = "Xander Harris",email = "xandertheharris@gmail.com"}
]
license = {text = "Copyright 2025"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
