[project]
name = "dotfiles"
version = "0.1.0"
description = "Dotfiles and automation of dubious quality"
authors = [
    {name = "Xander Harris",email = "xandertheharris@gmail.com"}
]
license = {text = "Copyright 2025"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible (>=13.1.0,<14.0.0)",
    "myst-parser[linkifiy] (>=4.0.1,<5.0.0)",
    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
    "sphinx-book-theme (>=1.1.4,<2.0.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "sphinxcontrib-autoyaml (>=1.1.3,<2.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
