[project]
name = "dotfiles"
version = "0.1.0"
description = "Dotfiles and automation of dubious quality"
authors = [{ name = "Xander Harris", email = "xandertheharris@gmail.com" }]
license = { text = "Copyright 2025" }
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
  "ansible (>=13.1.0,<14.0.0)",
  "myst-parser[linkify] (>=4.0.1,<5.0.0)",
  "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
  "sphinx-book-theme (>=1.1.4,<2.0.0)",
  "sphinx-copybutton (>=0.5.2,<0.6.0)",
  "sphinxcontrib-autoyaml (>=1.1.3,<2.0.0)",
  "pre-commit (>=4.5.0,<5.0.0)",
  "sphinx-design (>=0.6.1,<0.7.0)",
  "sphinx-last-updated-by-git (>=0.3.8,<0.4.0)",
  "sphinx-git (>=11.0.0,<12.0.0)",
  "linkify (>=1.4,<2.0)",
  "version-query (>=1.7.0,<2.0.0)",
  "myst[linkify] (>=1.0.4,<2.0.0)",
  "gitpython (>=3.1.45,<4.0.0)",
  "loguru (<0.7.3)",
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
